demo 页面完善，添加效果图

--- a/ueditor.frontend/pom.xml
+++ b/ueditor.frontend/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>ueditor.backend</artifactId>
             <version>1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
